fix: update layout of LoginPage to use flexbox for better alignment and structure

--- a/Frontend/src/pages/Login/LoginPage.css
+++ b/Frontend/src/pages/Login/LoginPage.css
@@ -1,6 +1,8 @@
 main {
-  display: grid;
+  display: flex;
+  flex-direction: column;
   height: 100vh;
   width: 100vw;
-  place-items: center;
+  align-items: center;
+  justify-content: center;
 }
